Testing spacing fixes.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -309,10 +309,6 @@ body {
 
             &:last-child {
                 margin-bottom: 0;
-
-                @media @mobile-650px {
-                    margin-bottom: 40px;
-                }
             }
         }
     }
@@ -357,7 +353,7 @@ body {
         }
 
         @media @mobile-650px {
-            margin-top: -40px;
+            margin-top: -35px!important;
         }
     }
 }
